objects/OrderItem__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>OrderItem</externalName>
    <fields>
        <fullName>AK_Order_Item_c__c</fullName>
        <externalDeveloperName>AK_Order_Item__c</externalDeveloperName>
        <label>AK Order Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdjustedLineAmount__c</fullName>
        <externalDeveloperName>AdjustedLineAmount</externalDeveloperName>
        <label>Adjusted Product Subtotal</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdjustedLineAmtWithTax__c</fullName>
        <externalDeveloperName>AdjustedLineAmtWithTax</externalDeveloperName>
        <label>Adjusted Product Subtotal with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Quantity_c__c</fullName>
        <externalDeveloperName>Allocated_Quantity__c</externalDeveloperName>
        <label>Allocated Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvailableQuantity__c</fullName>
        <externalDeveloperName>AvailableQuantity</externalDeveloperName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cart_Item_Product_Name_c__c</fullName>
        <externalDeveloperName>Cart_Item_Product_Name__c</externalDeveloperName>
        <label>Cart Item Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_c__c</fullName>
        <externalDeveloperName>Color__c</externalDeveloperName>
        <label>Color Marketing Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Extended_Price_c__c</fullName>
        <externalDeveloperName>Current_Extended_Price__c</externalDeveloperName>
        <label>Current Extended Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Return_Quantity_c__c</fullName>
        <externalDeveloperName>Current_Return_Quantity__c</externalDeveloperName>
        <label>Current Return Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Installation_Price_c__c</fullName>
        <externalDeveloperName>Dealer_Installation_Price__c</externalDeveloperName>
        <label>Total Original Installation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delta_Installation_Price_c__c</fullName>
        <externalDeveloperName>Delta_Installation_Price__c</externalDeveloperName>
        <label>Delta Installation Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delta_Quantity_c__c</fullName>
        <externalDeveloperName>Delta_Quantity__c</externalDeveloperName>
        <label>Delta Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <externalDeveloperName>EndDate</externalDeveloperName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Price_c__c</fullName>
        <externalDeveloperName>Extended_Price__c</externalDeveloperName>
        <label>Current Extended Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossUnitPrice__c</fullName>
        <externalDeveloperName>GrossUnitPrice</externalDeveloperName>
        <label>Gross Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Dealer_Price_c__c</fullName>
        <externalDeveloperName>Item_Dealer_Price__c</externalDeveloperName>
        <label>Item Dealer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_MSRP_Price_c__c</fullName>
        <externalDeveloperName>Item_MSRP_Price__c</externalDeveloperName>
        <label>Item MSRP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Package_Quantity_c__c</fullName>
        <externalDeveloperName>Item_Package_Quantity__c</externalDeveloperName>
        <label>Item Package Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Tax_Code_c__c</fullName>
        <externalDeveloperName>Item_Tax_Code__c</externalDeveloperName>
        <label>Item Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <externalDeveloperName>LineNumber</externalDeveloperName>
        <label>Line Number</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <externalDeveloperName>ListPrice</externalDeveloperName>
        <label>List Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Op_Code_c__c</fullName>
        <externalDeveloperName>Op_Code__c</externalDeveloperName>
        <label>Accessory Op Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDeliveryGroupId__c</fullName>
        <externalDeveloperName>OrderDeliveryGroupId</externalDeveloperName>
        <label>Order Delivery Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <externalDeveloperName>OrderId</externalDeveloperName>
        <label>Order ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Order_Products</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OrderItemNumber__c</fullName>
        <externalDeveloperName>OrderItemNumber</externalDeveloperName>
        <label>Order Product Number</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item_Status_c__c</fullName>
        <externalDeveloperName>Order_Item_Status__c</externalDeveloperName>
        <label>Order Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>FULFILLED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalOrderItemId__c</fullName>
        <externalDeveloperName>OriginalOrderItemId</externalDeveloperName>
        <label>Original Order Item ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <referenceTo>OrderItem__x</referenceTo>
        <relationshipName>Order_Products</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Original_Extended_Price_c__c</fullName>
        <externalDeveloperName>Original_Extended_Price__c</externalDeveloperName>
        <label>Original Extended Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricebookEntryId__c</fullName>
        <externalDeveloperName>PricebookEntryId</externalDeveloperName>
        <label>Price Book Entry ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <externalDeveloperName>Product2Id</externalDeveloperName>
        <label>Product ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Division_c__c</fullName>
        <externalDeveloperName>Product_Division__c</externalDeveloperName>
        <label>Product Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>Honda Auto</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Acura Auto</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Motorcycle</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Powerequipment</label>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Identifier_c__c</fullName>
        <externalDeveloperName>Product_Identifier__c</externalDeveloperName>
        <label>Product Identifier</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model_Marketing_Name_c__c</fullName>
        <externalDeveloperName>Product_Model_Marketing_Name__c</externalDeveloperName>
        <label>Product Model Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Model_c__c</fullName>
        <externalDeveloperName>Product_Model__c</externalDeveloperName>
        <label>Product Model</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_c__c</fullName>
        <externalDeveloperName>Product_Name__c</externalDeveloperName>
        <label>Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_SKU_c__c</fullName>
        <externalDeveloperName>Product_SKU__c</externalDeveloperName>
        <label>Product SKU</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Subdivision_c__c</fullName>
        <externalDeveloperName>Product_Subdivision__c</externalDeveloperName>
        <label>Product Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Acura</fullName>
                </value>
                <value>
                    <fullName>Motorcycle/Powersports</fullName>
                </value>
                <value>
                    <fullName>Powerequipment</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Hrc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type_c__c</fullName>
        <externalDeveloperName>Product_Type__c</externalDeveloperName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Core Charge</fullName>
                </value>
                <value>
                    <fullName>Motocompacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <externalDeveloperName>Quantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedOrderItemId__c</fullName>
        <externalDeveloperName>RelatedOrderItemId</externalDeveloperName>
        <label>Order Product ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <referenceTo>OrderItem__x</referenceTo>
        <relationshipName>Order_Products2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Released_Quantity_c__c</fullName>
        <externalDeveloperName>Released_Quantity__c</externalDeveloperName>
        <label>Released Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Extended_Price_c__c</fullName>
        <externalDeveloperName>Return_Extended_Price__c</externalDeveloperName>
        <label>Return Extended Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_Quantity_c__c</fullName>
        <externalDeveloperName>Return_Quantity__c</externalDeveloperName>
        <label>Return Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoundedLineAmount__c</fullName>
        <externalDeveloperName>RoundedLineAmount</externalDeveloperName>
        <label>Product Subtotal (Rounded)</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoundedLineAmtWithTax__c</fullName>
        <externalDeveloperName>RoundedLineAmtWithTax</externalDeveloperName>
        <label>Product Subtotal (Rounded) with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <externalDeveloperName>ServiceDate</externalDeveloperName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_c__c</fullName>
        <externalDeveloperName>Shipped_Quantity__c</externalDeveloperName>
        <label>Shipped Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Amount_Per_Unit_c__c</fullName>
        <externalDeveloperName>Shipping_Amount_Per_Unit__c</externalDeveloperName>
        <label>Shipping Amount per unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalAdjustedLineTaxAmount__c</fullName>
        <externalDeveloperName>TotalAdjustedLineTaxAmount</externalDeveloperName>
        <label>Adjusted Product Subtotal Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustmentAmount__c</fullName>
        <externalDeveloperName>TotalAdjustmentAmount</externalDeveloperName>
        <label>Total Adjustments</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustmentAmtWithTax__c</fullName>
        <externalDeveloperName>TotalAdjustmentAmtWithTax</externalDeveloperName>
        <label>Total Adjustments with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustmentDistAmount__c</fullName>
        <externalDeveloperName>TotalAdjustmentDistAmount</externalDeveloperName>
        <label>Distributed Order Adjustments</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustmentDistAmtWithTax__c</fullName>
        <externalDeveloperName>TotalAdjustmentDistAmtWithTax</externalDeveloperName>
        <label>Distributed Order Adjustments with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustmentDistTaxAmount__c</fullName>
        <externalDeveloperName>TotalAdjustmentDistTaxAmount</externalDeveloperName>
        <label>Distributed Order Adjustments Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAdjustmentTaxAmount__c</fullName>
        <externalDeveloperName>TotalAdjustmentTaxAmount</externalDeveloperName>
        <label>Total Adjustments Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmtWithTax__c</fullName>
        <externalDeveloperName>TotalAmtWithTax</externalDeveloperName>
        <label>Total Amount with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineAdjustmentAmount__c</fullName>
        <externalDeveloperName>TotalLineAdjustmentAmount</externalDeveloperName>
        <label>Product Adjustments</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineAdjustmentAmtWithTax__c</fullName>
        <externalDeveloperName>TotalLineAdjustmentAmtWithTax</externalDeveloperName>
        <label>Product Adjustments with Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineAdjustmentTaxAmount__c</fullName>
        <externalDeveloperName>TotalLineAdjustmentTaxAmount</externalDeveloperName>
        <label>Product Adjustments Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineAmount__c</fullName>
        <externalDeveloperName>TotalLineAmount</externalDeveloperName>
        <label>Product Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineTaxAmount__c</fullName>
        <externalDeveloperName>TotalLineTaxAmount</externalDeveloperName>
        <label>Product Subtotal Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <externalDeveloperName>TotalPrice</externalDeveloperName>
        <label>Total Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount__c</fullName>
        <externalDeveloperName>TotalTaxAmount</externalDeveloperName>
        <label>Total Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Current_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Current_Product_Tax__c</externalDeveloperName>
        <label>Total Current Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Current_ShippingAmt_c__c</fullName>
        <externalDeveloperName>Total_Current_ShippingAmt__c</externalDeveloperName>
        <label>Total Current Shipping Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Current_Shipping_TaxAMT_c__c</fullName>
        <externalDeveloperName>Total_Current_Shipping_TaxAMT__c</externalDeveloperName>
        <label>Total Current Shipping TaxAMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Original_ShippingAmt_c__c</fullName>
        <externalDeveloperName>Total_Original_ShippingAmt__c</externalDeveloperName>
        <label>Total Original Shipping Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Original_Shipping_TaxAmt_c__c</fullName>
        <externalDeveloperName>Total_Original_Shipping_TaxAmt__c</externalDeveloperName>
        <label>Total Original Shipping TaxAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Return_Installation_Charge_c__c</fullName>
        <externalDeveloperName>Total_Return_Installation_Charge__c</externalDeveloperName>
        <label>Total Return Installation Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Return_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Return_Product_Tax__c</externalDeveloperName>
        <label>Total Return Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax_c__c</fullName>
        <externalDeveloperName>Total_Tax__c</externalDeveloperName>
        <label>Total Original Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_Amt_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_Amt__c</externalDeveloperName>
        <label>Total Unavailable Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_PreTaxAmt_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_PreTaxAmt__c</externalDeveloperName>
        <label>Total Unavailable PreTax Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_ProductAmt_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_ProductAmt__c</externalDeveloperName>
        <label>Total Unavailable Product Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_ProductTax_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_ProductTax__c</externalDeveloperName>
        <label>Total Unavailable Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_ShippingAmt_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_ShippingAmt__c</externalDeveloperName>
        <label>Total Unavailable Shipping Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_ShippingTax_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_ShippingTax__c</externalDeveloperName>
        <label>Total Unavailable Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_Tax_c__c</fullName>
        <externalDeveloperName>Total_Unavailable_Tax__c</externalDeveloperName>
        <label>Total Unavailable Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeCode__c</fullName>
        <externalDeveloperName>TypeCode</externalDeveloperName>
        <label>Type Code</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Product</fullName>
                </value>
                <value>
                    <fullName>Delivery Charge</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unavailable_Quantity_c__c</fullName>
        <externalDeveloperName>Unavailable_Quantity__c</externalDeveloperName>
        <label>Unavailable Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <externalDeveloperName>UnitPrice</externalDeveloperName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Installation_Price_c__c</fullName>
        <externalDeveloperName>Updated_Installation_Price__c</externalDeveloperName>
        <label>Current Installation Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Quantity_c__c</fullName>
        <externalDeveloperName>Updated_Quantity__c</externalDeveloperName>
        <label>Current Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Product Ext</label>
    <pluralLabel>Order Products</pluralLabel>
</CustomObject>